Dumb startup for Ubuntu.

--- a/passemu.service
+++ b/passemu.service
@@ -7,6 +7,6 @@ WantedBy=multi-user.target
 [Service]
 ExecStart=/opt/passemu/passemu /dev/null
 Type=forking
-PIDDFile=/var/run/powerd.pid
+PIDFile=/var/run/powerd.pid
 Environment=HOME=/home/gkrikhan
 
